Add files via upload
Whole bunch of code cleanup with IDEA linter.